ML code's Epochs Increased

--- a/Image_classification.ipynb
+++ b/Image_classification.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Assigning Lables explictly"
+    "#### Assigning Lables Explictly"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "model.fit(x_train,\n",
     "         y_train,\n",
     "         batch_size=64,\n",
-    "         epochs=8,\n",
+    "         epochs=10,\n",
     "         validation_data=(x_test,y_test)\n",
     "         )"
    ]
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loading Image To Check performence of model"
+    "#### Loading Image To Check performance of Classifier"
    ]
   },
   {
